# genai_foundations

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml  setup.py
collateral/: links.md
data/responsible/: customer_order_management.json
data/ybox/: Alex_emails_march_04.csv
notebooks/: PythonFoundation.ipynb  Python_Foundations.ipynb  Solution_Notebook_Cred_Pay_Case_Study.ipynb  password_manager.ipynb  quiz_scratch.ipynb  rag_advanced_poc.ipynb  rag_poc.ipynb  shopping_cart_management.ipynb
notebooks/address/: automated_address_classification.ipynb
notebooks/agentic/: basic_graph.ipynb  controlflow.ipynb  langgraph_design_patterns.ipynb  news_discovery_agent.ipynb
notebooks/foundation/: debugging_code.ipynb  shopping_cart_management.ipynb
notebooks/loans/: primeedge_lending_services.ipynb
notebooks/prompting/: ai_differential_diagnosis.ipynb  prompt_engineering_code.ipynb
notebooks/rag/: salesforce_crm_assistant.ipynb
notebooks/tasks/: STT_and_Summarization_Workflow_Complete.ipynb
notebooks/transformers/: product_recommendation_system.ipynb  transformers.ipynb
notebooks/wine/: wine_data.ipynb  wine_data_classifiers-1.ipynb  wine_data_classifiersALL.ipynb  wine_data_classifiersRFs.ipynb  wine_data_classifiersSVM.ipynb  wine_data_classifiersdecisiontrees.ipynb  wine_data_classifierslogisticregression.ipynb
